Fix spacing issue

--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,6 @@
 html {
   box-sizing: border-box;
+  line-height: 1.4;
   font-family: "Open Sans", sans-serif;
 }
 
@@ -28,9 +29,9 @@ body {
   max-width: 50em;
   text-align: left;
   left: 50%;
-  bottom: 3%;
+  bottom: 4%;
   transform: translateX(-50%);
-  padding: 1em;
+  padding: 0 1.5em 1em;
 }
 
 h2 {
@@ -41,7 +42,7 @@ h2 {
 }
 
 p {
-  padding-top: .75em;
+  padding-top: .6em;
   margin: auto;
   font-size: 2rem;
   font-style: italic;
